--- a/intro.html
+++ b/intro.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <style>
+        .class{
+            font-size: 100px;
+        }
+
         *{
             margin:0;
             padding:0;
@@ -42,6 +46,7 @@
             transition: 0.5s;
             border: 1px solid none;
             border-radius: 25px;
+            font-size: x-large;
         }
         .both{
             display: flex;
@@ -55,6 +60,7 @@
             bottom: 50px;
             top:75px;
             left: 20px;
+            font-size: x-large;
         
         }
         .hard{
@@ -63,6 +69,7 @@
             bottom: 50px;
             top: 75px;
             left: 55px;
+            font-size: x-large;
         }
         
         .both .soft li a{
